--- a/README.adoc
+++ b/README.adoc
@@ -24,14 +24,14 @@ To contribute to this document, see link:editing.adoc[] on how to set up the edi
 
 == Components
 
-* link:supermodel.html[Specification]
-* link:backbone/model.ttl[Backbone Model]
+* link:https://spatial-information-qld.github.io/supermodel/supermodel.html[Specification]
+* https://spatial-information-qld.github.io/supermodel/backbone/model.ttl[Backbone Model]
 ** machine-readable version
 * https://w3id.org/profile/anz-address[Address Model]
 ** external to this Supermodel
 * https://w3id.org/profile/qsi-placenames[Place Names Model]
 ** defined within this Supermodel
-* link:supermodel.html#_qsi_cadastral_model[Cadastre Model]
+* link:https://spatial-information-qld.github.io/supermodel/supermodel.html#_qsi_cadastral_model[Cadastre Model]
 ** defined within this Supermodel
 
 // == Introduction
@@ -44,8 +44,8 @@ To contribute to this document, see link:editing.adoc[] on how to set up the edi
 
 // The main resources within this Supermodel and the RM-ODP _viewpoint_ for which they are defined are:
 
-// . https://nicholascar.com/qsi-supermodel/supermodel.html[Model Document] - the _Information Viewpoint_
-// . https://nicholascar.com/qsi-supermodel/requirements.html[Requirements listing] - part of the _Enterprise Viewpoint_
+// . https://spatial-information-qld.github.io/supermodel/supermodel.html[Model Document] - the _Information Viewpoint_
+// . https://spatial-information-qld.github.io/supermodel/requirements.html[Requirements listing] - part of the _Enterprise Viewpoint_
 // . ...
 
 
